--- a/src/app/main/profile/editProfile/profile.html
+++ b/src/app/main/profile/editProfile/profile.html
@@ -1350,7 +1350,7 @@
 
                                                   <select class="form-control input-rounded "
                                                           ng-model="profile.login_user.sister_married">
-                                                      <option value="">Select</option>
+                                                      <option selected value="">Select</option>
 
                                                       <option ng-selected="profile.login_user.sister_married == 0"
                                                               value="0">None
@@ -1380,7 +1380,7 @@
 
                                           <select class="form-control input-rounded "
                                                   ng-model="profile.login_user.family_status">
-                                              <option value="">Select</option>
+                                              <option selected value="">Select</option>
                                               <option value="middle">Middle</option>
                                               <option value="upper">Upper</option>
                                               <option value="rich">Rich</option>
@@ -1396,7 +1396,7 @@
 
                                           <select class="form-control input-rounded "
                                                   ng-model="profile.login_user.father_status">
-                                              <option value="">Select</option>
+                                              <option selected value="">Select</option>
                                               <option value="employed">Employed</option>
                                               <option value="business">Business Man</option>
                                               <option value="professional">Professional</option>
@@ -1411,7 +1411,7 @@
 
                                           <select class="form-control input-rounded "
                                                   ng-model="profile.login_user.mother_status">
-                                              <option value="">Select</option>
+                                              <option selected value="">Select</option>
                                               <option value="homemaker">Homemaker</option>
                                               <option value="employed">Employed</option>
                                               <option value="business">Business Woman</option>
@@ -1616,7 +1616,7 @@
                                                 <div class="col-md-6">
                                                     <select class=" form-control input-rounded "
                                                             ng-model="profile.login_user.preferences.age_start">
-                                                        <option value="">Select</option>
+                                                        <option selected value="">Select</option>
                                                         <option ng-selected="profile.login_user.preferences.age_start == 18"
                                                                 value="18">18
                                                         </option>
@@ -1659,7 +1659,7 @@
 
                                                     <select class="form-control input-rounded "
                                                             ng-model="profile.login_user.preferences.age_end">
-                                                        <option value="">Select</option>
+                                                        <option selected value="">Select</option>
                                                         <option ng-selected="profile.login_user.preferences.age_end == 18"
                                                                 value="18">18
                                                         </option>
@@ -1709,7 +1709,7 @@
                                                 <div class="col-md-6">
                                                     <select class="form-control input-rounded "
                                                             ng-model="profile.login_user.preferences.height_start">
-                                                        <option value="">Select</option>
+                                                        <option selected value="">Select</option>
                                                         <option ng-selected="profile.login_user.preferences.height_start == 137"
                                                                 value="137">137 cms
                                                         </option>
@@ -1881,7 +1881,6 @@
 
                                                     <select class="form-control input-rounded "
                                                             ng-model="profile.login_user.preferences.height_end">
-                                                        <option value="">Select</option>
                                                         <option ng-selected="profile.login_user.preferences.height_end == 137"
                                                                 value="137">137 cms
                                                         </option>
@@ -2060,8 +2059,7 @@
 
                                             <select class="form-control input-rounded "
                                                     ng-model="profile.login_user.preferences.physical_status">
-                                                <option value="">Select</option>
-                                                <option value="normal">Normal</option>
+                                                <option selected value="normal">Normal</option>
                                                 <option value="challenged">Challenged</option>
                                                 <option value="any">Any</option>
                                             </select>
@@ -2092,8 +2090,7 @@
 
                                             <select class="form-control input-rounded "
                                                     ng-model="profile.login_user.preferences.marital_status">
-                                                <option>Select</option>
-                                                <option value="unmarried">Never Married</option>
+                                                <option selected value="unmarried">Never Married</option>
                                                 <option value="married"> Married</option>
                                                 <option value="divorced">Divorced</option>
                                                 <option value="widow">Widow</option>
@@ -2108,8 +2105,7 @@
 
                                             <select class="form-control input-rounded "
                                                     ng-model="profile.login_user.preferences.eating_habits">
-                                                <option>Select</option>
-                                                <option value="vegetarian">Vegiterian</option>
+                                                <option selected value="vegetarian">Vegiterian</option>
                                                 <option value="nonvegetarian">Non Vegiterian</option>
                                                 <option value="eggeterian">Eggeterian</option>
                                             </select>
@@ -2121,8 +2117,7 @@
 
                                             <select class="form-control input-rounded "
                                                     ng-model="profile.login_user.preferences.drinking_habits">
-                                                <option>Select</option>
-                                                <option value="yes">Yes</option>
+                                                <option selected value="yes">Yes</option>
                                                 <option value="no">No</option>
 
                                             </select>
@@ -2134,8 +2129,7 @@
 
                                             <select class="form-control input-rounded "
                                                     ng-model="profile.login_user.preferences.smoking_habits">
-                                                <option>Select</option>
-                                                <option value="yes">Yes</option>
+                                                <option selected value="yes">Yes</option>
                                                 <option value="no">No</option>
                                             </select>
                                         </div>
