--- a/src/app/main/profile/editProfile/profile.html
+++ b/src/app/main/profile/editProfile/profile.html
@@ -1260,10 +1260,10 @@
                                           </select>
                                       </div>
                                       <div class="col-md-6">
-                                          <label class="font-weight ">No of Brother(s)</label>
 
-                                          <div class="col-md-12">
+                                          <div class="row">
                                               <div class="col-md-6">
+                                                  <label class="font-weight ">No of Brother(s)</label>
 
                                                   <select class="form-control input-rounded "
                                                           ng-model="profile.login_user.brother" ng-click="SelectBrother()">
@@ -1291,6 +1291,7 @@
                                               </div>
 
                                               <div class="col-md-6">
+                                                  <label class="font-weight ">No of Brother(s) Married</label>
 
                                                   <select class="form-control input-rounded "
                                                           ng-model="profile.login_user.bother_married">
@@ -1322,10 +1323,10 @@
                                   <div class="form-group">
 
                                       <div class="col-md-6">
-                                          <label class=" uppercase font-weight ">No of Sister(s)</label>
 
-                                          <div class="col-md-12">
+                                          <div class="row">
                                               <div class="col-md-6">
+                                                  <label class="  font-weight ">No of Sister(s)</label>
 
                                                   <select class="form-control input-rounded "
                                                           ng-model="profile.login_user.sister" ng-click="SelectSister()">
@@ -1347,6 +1348,7 @@
                                                   </select>
                                               </div>
                                               <div class="col-md-6">
+                                                  <label class="  font-weight ">No of Sister(s) Married</label>
 
                                                   <select class="form-control input-rounded "
                                                           ng-model="profile.login_user.sister_married">
@@ -1375,7 +1377,7 @@
                                           </div>
                                       </div>
                                       <div class="col-md-6">
-                                          <label class=" uppercase font-weight ">Family Status</label>
+                                          <label class="font-weight ">Family Status</label>
 
 
                                           <select class="form-control input-rounded "
@@ -1391,7 +1393,7 @@
                                   <div class="form-group">
 
                                       <div class="col-md-6">
-                                          <label class=" uppercase font-weight ">Father's Status</label>
+                                          <label class="font-weight ">Father's Status</label>
 
 
                                           <select class="form-control input-rounded "
@@ -1406,7 +1408,7 @@
                                           </select>
                                       </div>
                                       <div class="col-md-6">
-                                          <label class=" uppercase font-weight ">Mother's Status</label>
+                                          <label class="font-weight ">Mother's Status</label>
 
 
                                           <select class="form-control input-rounded "
@@ -2050,8 +2052,6 @@
                                                 </div>
                                             </div>
                                         </div>
-
-
                                         <div class="col-md-6">
                                             <label class=" font-weight-head  ">
                                                 Physical
@@ -2064,7 +2064,6 @@
                                                 <option value="any">Any</option>
                                             </select>
                                         </div>
-
                                         <div class="col-md-6">
 
                                             <label class=" font-weight-head  ">
@@ -2082,7 +2081,6 @@
                                             </select>
 
                                         </div>
-
                                         <div class="col-md-6">
                                             <label class=" font-weight-head  ">
                                                 Marital
