--- a/src/app/navigation/matches/matchesNavigation.html
+++ b/src/app/navigation/matches/matchesNavigation.html
@@ -125,7 +125,7 @@
                                                 <div class="col-md-12 margin-top-10">
                                                     <button type="button"
                                                             class="pull-left btn btn-sm btn-outline custom-button"><span
-                                                            class="btn-label-text" ng-click="search()">Submit</span></button>
+                                                            class="btn-label-text" ng-click="facetSearch()">Submit</span></button>
                                                 </div>
                                             </div>
                                         </div>
@@ -269,7 +269,7 @@
                                                 <div class="col-md-12 margin-top-10">
                                                     <button type="button"
                                                             class="pull-left btn btn-sm btn-outline custom-button"><span
-                                                            class="btn-label-text" ng-click="search()">Submit</span></button>
+                                                            class="btn-label-text" ng-click="facetSearch()">Submit</span></button>
                                                 </div>
                                             </div>
                                         </div>
