--- a/src/app/footer/footer.html
+++ b/src/app/footer/footer.html
@@ -41,7 +41,7 @@
                                         <h4 class="heading"> About us</h4>
                                     </div>
                                     <div class="col-md-12">
-                                        <span class="description"> 24X7 Live help | Contact Us | Feedback | FAQ | Safety Trips</span>
+                                        <span class="description"> 24X7 Live help | Contact Us | Feedback | FAQ </span>
                                     </div>
                                 </div>
                             </div>
@@ -51,7 +51,7 @@
                                         <h4 class="heading"> Quick Link</h4>
                                     </div>
                                     <div class="col-md-12">
-                                        <span class="description"> About Us | Blog | Feedback | Privacy Policy | Terms of Use | Site Map</span>
+                                        <span class="description"> Privacy Policy | Terms of Use | Safety Trips | Site Map </span>
                                     </div>
                                 </div>
                             </div>
