--- a/src/app/main/registration/registration.html
+++ b/src/app/main/registration/registration.html
@@ -15,7 +15,7 @@
             </select>
             <span ng-if="showMS">
                         <div class="user-error-msg-arrow" ></div>
-                        <div class="user-error-msg" >Select marital status</div>
+                        <div class="user-error-msg" >The selected marital status is invalid</div>
                     </span>
                 </div>
         </div>
