--- a/src/app/main/searchresults/searchresults.html
+++ b/src/app/main/searchresults/searchresults.html
@@ -165,15 +165,15 @@
                                     </div>
                                     <div class="col-md-3 col-sm-3 col-xs-3"
                                          style="height:60px;font-size:14px;padding: 20px;border: 1px solid #eef1f5;background-color: gainsboro;cursor: pointer">
-                                        <i class="fa fa-phone"></i> <span class="hidden-sm hidden-xs"> Call now</span>
+                                        <i class="fa fa-phone"></i> <span class="hidden-sm hidden-xs"> Contact Details</span>
                                     </div>
                                     <div class="col-md-3 col-sm-3 col-xs-3"
                                          style="height:60px;font-size:14px;padding: 20px;border: 1px solid #eef1f5;background-color: gainsboro;cursor: pointer"><i
                                             class="fa fa-commenting-o"></i> <span class="hidden-sm hidden-xs">  Chat now</span>
                                     </div>
                                     <div class="col-md-3 col-sm-3 col-xs-3" ng-click="sendInterest(item.id_people)"
-                                         style="height:60px;font-size:14px;padding: 20px;border: 1px solid #eef1f5;background-color:white;cursor: pointer"><i
-                                            class="fa fa-heart" style="color: black!important;font-size: 18px"></i><span class="hidden-sm hidden-xs"> Send Interest</span>
+                                         style="height:60px;font-size:14px;padding: 20px;border: 1px solid #eef1f5;background-color:#e7505a;cursor: pointer"><i
+                                            class="fa fa-heart" style="color: white!important;font-size: 18px"></i><span class="hidden-sm hidden-xs" style="color: white"> Send Interest</span>
                                     </div>
 
                                 </div>
