--- a/src/app/main/view-profile/viewProfile.html
+++ b/src/app/main/view-profile/viewProfile.html
@@ -116,7 +116,7 @@
                                     </a>
                                     <div class="col-md-4 col-sm-4 col-xs-4 vp-main-link"
                                             >
-                                        <i class="fa fa-phone"></i> <span class="hidden-sm hidden-xs"> Call now</span>
+                                        <i class="fa fa-phone"></i> <span class="hidden-sm hidden-xs"> Contact Details</span>
                                     </div>
                                     <div class="col-md-4 col-sm-4 col-xs-4 vp-main-link"
                                             ><i
