--- a/src/app/directive/image-scroll/image-scroll.html
+++ b/src/app/directive/image-scroll/image-scroll.html
@@ -5,10 +5,10 @@
 
 </div>
 <div style="width: 100%;">
-                                            <a style="margin-left: 40px" ng-if="size > 1" ng-click="imageBackward()" class="btn-circle  default pull-left">
-                                                <i class="icon-arrow-left"></i>
+                                            <a style="margin-left: 40px;height: 40px" ng-if="size > 1" ng-click="imageBackward()" class=" btn btn-circle  default pull-left">
+                                                <i class="icon-arrow-left" style="line-height: 28px"></i>
                                             </a>
-                                            <a  style="margin-right: 40px"ng-if="size > 1" ng-click="imageForward()" class="btn-circle  default pull-right">
-                                                <i class="icon-arrow-right"></i>
+                                            <a  style="margin-right: 40px;height: 40px" ng-if="size > 1" ng-click="imageForward()" class="btn btn-circle  default pull-right">
+                                                <i class="icon-arrow-right" style="line-height: 28px"></i>
                                             </a>
 </div>
